--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
   provider: ^6.1.1
   animated_custom_dropdown: ^3.0.0
   easy_date_timeline: ^1.0.5
+  firebase_core: ^2.25.5
+  bot_toast: ^4.1.3
+  lottie: ^3.1.0
+  firebase_auth: ^4.17.6
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +35,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/icons/
 
 
 
